[CW6] Add Valute Tests